--- a/static/css/respi.css
+++ b/static/css/respi.css
@@ -2,14 +2,17 @@
     /* display: none; */
     display: block;
     text-align: center;
-    height: 30vh;
+    height: 10vh;
     width: 90vw;
     margin: 0 auto;
-    margin-top: 15vh;
+    margin-top: 5vh;
     /*display: inline;*/
 }
 
-.plus_button {
+
+.button {
+  width: 80px;
+  height: 80px;
 display: inline;
 color: #383838 !important;
 text-transform: uppercase;
@@ -22,13 +25,31 @@ transition: all 0.4s ease 0s;
 font-size: 48px;
 font-weight: bold;
   width: 20%;
-
-
-
-
 }
 
-.minus_button {
+.link_button {
+  width: 80px;
+  height: 80px;
+display: inline;
+color: #383838 !important;
+text-transform: uppercase;
+text-decoration: none;
+background: #81a2e3;
+padding: 10px;
+border-radius: 5px;
+border: none;
+transition: all 0.4s ease 0s;
+font-size: 32px;
+font-weight: bold;
+  width: 20%;
+  Margin : 0 20px;
+  Text-decoration: none;
+}
+
+
+.button_start {
+  width: 200px;
+  height: 80px;
 display: inline;
 color: #383838 !important;
 text-transform: uppercase;
@@ -41,17 +62,28 @@ transition: all 0.4s ease 0s;
 font-size: 48px;
 font-weight: bold;
   width: 20%;
+}
 
+
+.menu{
+
+display: block;
+text-align: center;
+height: 15vh;
+width: 90vw;
+margin: 0 auto;
+margin-top: 5vh;
 
 }
+
 
 .Value_indicator {
 display: inline;
 color: #81a2e3;
 font-size: 24px;
 font-weight: bold;
-
-
+width: 40vw;
+Margin : 0 20px;
 
 }
 
