--- a/static/css/respi.css
+++ b/static/css/respi.css
@@ -1,8 +1,12 @@
+
+/* Sections  */
+
+
 .selector_AC {
     /* display: none; */
     display: block;
     text-align: center;
-    height: 10vh;
+    height: 12vh;
     width: 90vw;
     margin: 0 auto;
     margin-top: 5vh;
@@ -10,59 +14,17 @@
 }
 
 
-.button {
-  width: 80px;
-  height: 80px;
-display: inline;
-color: #383838 !important;
-text-transform: uppercase;
-text-decoration: none;
-background: #81a2e3;
-padding: 10px;
-border-radius: 5px;
-border: none;
-transition: all 0.4s ease 0s;
-font-size: 48px;
-font-weight: bold;
-  width: 20%;
+.start_area {
+    /* display: none; */
+    display: block;
+    text-align: center;
+    height: 12vh;
+    width: 90vw;
+    margin: 0 auto;
+    margin-top: 5vh;
+    /*display: inline;*/
 }
 
-.link_button {
-  width: 80px;
-  height: 80px;
-display: inline;
-color: #383838 !important;
-text-transform: uppercase;
-text-decoration: none;
-background: #81a2e3;
-padding: 10px;
-border-radius: 5px;
-border: none;
-transition: all 0.4s ease 0s;
-font-size: 32px;
-font-weight: bold;
-  width: 20%;
-  Margin : 0 20px;
-  Text-decoration: none;
-}
-
-
-.button_start {
-  width: 200px;
-  height: 80px;
-display: inline;
-color: #383838 !important;
-text-transform: uppercase;
-text-decoration: none;
-background: #81a2e3;
-padding: 10px;
-border-radius: 5px;
-border: none;
-transition: all 0.4s ease 0s;
-font-size: 48px;
-font-weight: bold;
-  width: 20%;
-}
 
 
 .menu{
@@ -75,6 +37,84 @@ margin: 0 auto;
 margin-top: 5vh;
 
 }
+
+/* BUTTTONS  */
+
+.button {
+  width: 80px;
+  height: 80px;
+display: inline;
+color: #383838 !important;
+text-transform: uppercase;
+text-decoration: none;
+background: #81a2e3;
+padding: 10px;
+border-radius: 20px;
+border: none;
+transition: all 0.1s ease 0s;
+font-size: 48px;
+font-weight: bold;
+
+}
+
+.button:active {
+background: #b55071;
+
+}
+
+.link_button {
+  width: 80px;
+  height: 80px;
+display: inline;
+color: #383838 !important;
+text-transform: uppercase;
+text-decoration: none;
+background: #81a2e3;
+padding: 10px;
+border-radius: 20px;
+border: none;
+transition: all 0.1s ease 0s;
+font-size: 32px;
+font-weight: bold;
+ Margin : 0 20px;
+}
+
+.link_button:active {
+background: #b55071;
+
+}
+
+.no_decoration_link{
+
+ Text-decoration: none;
+
+}
+
+
+.button_start {
+
+width: 200px;
+height: 80px;
+color: #383838 !important;
+text-transform: uppercase;
+text-decoration: none;
+background: #81a2e3;
+padding: 10px;
+border-radius: 20px;
+border: none;
+transition: all 0.1s ease 0s;
+font-size: 32px;
+font-weight: bold;
+
+}
+
+.button_start:active {
+background: #b55071;
+
+}
+
+
+
 
 
 .Value_indicator {
@@ -90,11 +130,11 @@ Margin : 0 20px;
 
 .title {
 text-align: center;
-height: 10vh;
+height: 5vh;
 width: 90vw;
 position: relative;
 width: 100%;
-top: 10px;
+
 font-size: 46px;
 color: #81a2e3;
 
