--- a/static/css/AC.css
+++ b/static/css/AC.css
@@ -59,7 +59,7 @@ outline:none
 }
 
 .button:active {
-background: #b55071;
+background: #6ec74a;
 
 }
 
@@ -82,7 +82,7 @@ font-weight: bold;
 }
 
 .link_button:active {
-background: #b55071;
+background: #6ec74a;
 
 }
 
@@ -111,13 +111,11 @@ outline:none
 
 }
 
-.button_start:active {
-background: #b55071;
+
+.active {
+background: #6ec74a;
 
 }
-
-
-
 
 
 .Value_indicator {
@@ -149,10 +147,9 @@ font-weight: bold;
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  height: 95vh;
+  height: 90vh;
   /* width: 100%; */
   background: linear-gradient(#383838, #616060);
   color: white;
     user-select: none;
 }
-
